--- a/practise/Bakudevs/index.html
+++ b/practise/Bakudevs/index.html
@@ -30,7 +30,7 @@
         <a class="item item3" href="./index.html"
           ><i class="fa-regular fa-heart"></i> Istək siyahısı</a
         >
-        <a class="item item4" href="./index.html"
+        <a class="item item4" href="./login.html"
           ><i class="fa-solid fa-right-to-bracket"></i>Daxil ol</a
         >
         <a class="item item5" href="./index.html"
