--- a/lessons/positions/index.html
+++ b/lessons/positions/index.html
@@ -7,11 +7,6 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <div class="head">
-        <div class="ear ear-left"></div>
-        <div class="ear ear-right"></div>
-        <div class="eye eye-left"></div>
-        <div class="eye eye-right"></div>
-    </div>
+    <div class="sircle"></div>
 </body>
 </html>
