--- a/practise/Bakudevs/index.html
+++ b/practise/Bakudevs/index.html
@@ -33,7 +33,7 @@
         <a class="item item4" href="./login.html"
           ><i class="fa-solid fa-right-to-bracket"></i>Daxil ol</a
         >
-        <a class="item item5" href="./index.html"
+        <a class="item item5" href="./signup.html"
           ><i class="fa-solid fa-pen-to-square"></i>Qeydiyyatdan keç</a
         >
       </div>
