--- a/practise/TravellingBlog/landing.html
+++ b/practise/TravellingBlog/landing.html
@@ -23,10 +23,10 @@
           </div>
           <div class="menu">
             <a href="./landing.html">Home</a>
-            <a href="./landing.html">About us</a>
-            <a href="./landing.html">Destination</a>
-            <a href="./landing.html">Tips</a>
-            <a href="./landing.html">Contact</a>
+            <a href="./about.html">About us</a>
+            <a href="./destination.html">Destination</a>
+            <a href="./tips.html">Tips</a>
+            <a href="./contact.html">Contact</a>
           </div>
         </div>
         <div class="counter">
